--- a/foundations.tex
+++ b/foundations.tex
@@ -729,7 +729,7 @@ So if the kernel induces an equivalence, the dimensions of the two varieties sho
     Every fully faithful exact functor between is induced by a Fourier-Mukai transform. In particular every equivalence as well. Moreover the kernel is unique up to isomorphism.
 \end{theorem}
 
-We also cite the following useful criterion, due to Bondal-Orlov \cite{bondal_semiorthogonal_1995}:
+The proof can be found in \cite{orlov_derived_2003}. We also cite the following useful criterion, due to Bondal-Orlov \cite{bondal_semiorthogonal_1995}:
 \begin{proposition}{Generation criterion}{Generation criterion}
     A Fourier-Mukai transform with kernel $\calE$ is fully faithful if and only if \begin{gather*}
         \Hom (\Phi_\calE \O_x, \Phi_\calE \O_y[i])=\begin{cases*}
