--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 \input{commands.tex}
 
 \title{Derived Categories of Coherent Sheaves}
-\author{Ines Chung-Halpern, Calum Crossley, Bogdan Simeonov}
+\author{In\'es Chung-Halpern, Calum Crossley, Bogdan Simeonov}
 \date{}
 
 \begin{document}
