--- a/Bogdan presentation/bogdanpresentation.tex
+++ b/Bogdan presentation/bogdanpresentation.tex
@@ -1,76 +1,7 @@
 \documentclass[10pt]{beamer}
 
 \usetheme[progressbar=frametitle]{metropolis}
-\usepackage{appendixnumberbeamer}
-\definecolor{maincolor}{RGB}{35, 55, 58}
-\usepackage{booktabs}
-\usepackage[scale=2]{ccicons}
-\usepackage{tcolorbox}
-\tcbuselibrary{theorems}
-\usepackage{pgfplots}
-\usepgfplotslibrary{dateplot}
-\usepackage{xspace}
-\usepackage{tikz-cd}
-\setbeamercovered{transparent}
-\newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
-
-% {{{
-\def\sh{\mathcal}                   % sheaf font
-\def\bb{\mathbb}                    % bold font
-\def\cat{\mathtt}                   % category font
-\def\leq{\leqslant}                 % <=
-\def\geq{\geqslant}                 % >=
-\def\setmin{-}                      % set minus
-\def\rad{\mathfrak{r}}              % radical
-\def\nilrad{\mathfrak{N}}           % nilradical
-\def\emp{\varnothing}               % empty set
-\def\vphi{\phi}                     % for switching \phi and \varphi, change if needed
-\def\HH{\mathrm{H}}                 % cohomology H
-\def\CHH{\check{\HH}}               % Čech cohomology H
-\def\RR{\mathrm{R}}                 % right derived R
-\def\LL{\mathrm{L}}                 % left derived L
-\def\dual#1{{#1}^\v}              % dual
-\def\v{\smash{\scalebox{.8}[1.4]{\rotatebox{90}{\guilsinglleft}}}}
-\def\kres{k}                        % residue field k
-\def\C{\cat{C}}                     % category C
-\def\op{^\cat{op}}                  % opposite category
-\def\Set{\cat{Set}}                 % category of sets
-\def\CHom{\cat{Hom}}                % functor category
-\def\supertilde{{\,\widetilde{\,}\,}}   % use \supertilde instead of ^\sim
-\def\GL{\bb{GL}}
-\def\Q{\bb{Q}}
-\def\Z{\bb{Z}}
-\def\R{\bb{R}}
-\def\C{\bb{C}}
-\def\O{\sh{O}}
-\def\G{\bb{G}}
-\def\P{\bb{P}}
-\def\bbGamma{\boldsymbol\Gamma}
-\def\red{\mathrm{red}}
-\def\rg{\operatorname{rg}}
-\def\gr{\operatorname{gr}}
-\def\Gr{\operatorname{Gr}}
-\def\Sym{\operatorname{Sym}}
-\def\Hom{\operatorname{Hom}}
-\def\Proj{\operatorname{Proj}}
-\def\Tor{\operatorname{Tor}}
-\def\Ext{\operatorname{Ext}}
-\def\Supp{\operatorname{Supp}}
-\def\Ker{\operatorname{Ker}}
-\def\Im{\operatorname{Im}}
-\def\Coker{\operatorname{Coker}}
-\def\Spec{\operatorname{Spec}}
-\def\Spf{\operatorname{Spf}}
-\def\grad{\operatorname{grad}}
-\def\dimc{\operatorname{dimc}}
-\def\codim{\operatorname{codim}}
-\def\id{\operatorname{id}}
-\def\Der{\operatorname{Der}}
-\def\Diff{\operatorname{Diff}}
-\def\Hyp{\operatorname{Hyp}}
-\def\Tr{\operatorname{Tr}}
-% }}}
-
+\input{presentationcommands.tex}
 
 \title{Derived categories of coherent sheaves}
 % \date{\today}
@@ -79,12 +10,6 @@
 % \titlegraphic{\hfill\includegraphics[height=1.5cm]{logo.pdf}}
 
 \begin{document}
-
-\newtcbtheorem{colordef}{Definition} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries, fontupper=\itshape}{th}
-
-\newtcbtheorem{colorthm}{Theorem} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries, fontupper=\itshape}{th}
-
-\newtcbtheorem{constructionbox}{Construction} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries, fontupper=\upshape}{th}
 
 \maketitle
 %Computer Project?
@@ -98,6 +23,78 @@
     \end{itemize}
  
 \end{frame}
+
+\begin{frame}[fragile]{The cubic fourfold}
+    $X\subset \P^5$ is the zero locus of a degree $3$ polynomial.  \pause
+
+    \captionsetup{justification=centering}
+        \hfill
+    \begin{minipage}[t]{0.4\textwidth}
+    \centering
+        \begin{figure}[H]
+        \begin{tikzcd}[ampersand replacement=\&, row sep=0.10em, column sep=0.10em]
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \\
+            \&   \& 1  \&   \&   \\
+            \& 0 \&    \& 0 \&   \\
+          1 \&   \& 20 \&   \& 1 \\
+            \& 0 \&    \& 0 \&   \\
+            \&   \& 1  \&   \& 
+        \end{tikzcd}
+
+        \caption*{Hodge diamond of K3 surface} \label{fig: MonFun2}
+        \end{figure}
+    \end{minipage}
+    \captionsetup{justification=centering}
+    \begin{minipage}[t]{0.4\textwidth}
+    \centering
+        \begin{figure}[H]
+        \begin{tikzcd}[ampersand replacement=\&, row sep=0.10em, column sep=0.10em]
+            \&   \&   \&   \& 1  \&   \&   \&   \&   \\
+            \&   \&   \& 0 \&    \& 0 \&   \&   \&   \\
+            \&   \& 0 \&   \& 1  \&   \& 0 \&   \&   \\
+            \& 0 \&   \& 0 \&    \& 0 \&   \& 0 \&   \\
+          0 \&   \& 1 \&   \& 21 \&   \& 1 \&   \& 0 \\
+            \& 0 \&   \& 0 \&    \& 0 \&   \& 0 \&   \\
+            \&   \& 0 \&   \& 1  \&   \& 0 \&   \&   \\
+            \&   \&   \& 0 \&    \& 0 \&   \&   \&   \\
+            \&   \&   \&   \& 1  \&   \&   \&   \& 
+        \end{tikzcd}
+        \centering\caption*{\,\,\,\,\,\,\,\,Hodge diamond of X} \label{fig: MonFun3}
+        \end{figure}
+    \end{minipage}
+    \hfill\null
+
+\end{frame}
+
 
 
 
