--- a/Bogdan presentation/presentationcommands.tex
+++ b/Bogdan presentation/presentationcommands.tex
@@ -12,6 +12,8 @@
 \newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
 \usepackage{graphicx}
 \usepackage{subcaption}
+\graphicspath{ {./images/} }
+
 
 
 
@@ -74,7 +76,7 @@
 
 \newtcbtheorem{colordef}{Definition} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries, fontupper=\itshape}{th}
 
-\newtcbtheorem{colorthm}{Theorem} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries, fontupper=\itshape}{th}
+\newtcbtheorem{colorthm}{Theorem} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=white, fonttitle = \upshape\bfseries, fontupper=\itshape}{th}
 
 \newtcbtheorem{constructionbox}{Construction} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries, fontupper=\upshape}{th}
 
