--- a/Bogdan presentation/presentationcommands.tex
+++ b/Bogdan presentation/presentationcommands.tex
@@ -13,7 +13,8 @@
 \usepackage{graphicx}
 \usepackage{subcaption}
 \graphicspath{ {./images/} }
-
+\usepackage{mathrsfs}
+\usepackage{comment}
 
 
 
@@ -83,3 +84,35 @@
 \newtcbtheorem{constructionbox}{Construction} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries, fontupper=\upshape}{th}
 
 %\usepackage{floatrow}
+
+% letters
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\A}{\mathbb{A}}
+\renewcommand{\P}{\mathbb{P}}
+\renewcommand{\O}{\mathcal{O}}
+\newcommand{\bbH}{\mathbb{H}}
+\newcommand{\calH}{\mathcal{H}}
+\newcommand{\calA}{\mathcal{A}}
+\newcommand{\calB}{\mathcal{B}}
+\newcommand{\calC}{\mathcal{C}}
+\newcommand{\calD}{\mathcal{D}}
+\newcommand{\calE}{\mathcal{E}}
+\newcommand{\calF}{\mathcal{F}}
+\newcommand{\calG}{\mathcal{G}}
+\newcommand{\calL}{\mathcal{L}}
+\newcommand{\calP}{\mathcal{P}}
+\newcommand{\calS}{\mathcal{S}}
+\newcommand{\calI}{\mathcal{I}}
+\newcommand{\calN}{\mathcal{N}}
+\newcommand{\calT}{\mathcal{T}}
+\newcommand{\calR}{\mathcal{R}}
+\newcommand{\bfF}{\mathbf{F}}
+\newcommand{\bfL}{\mathbf{L}}
+\newcommand{\tbfF}{\widetilde{\mathbf{F}}}
+\newcommand{\tbfL}{\widetilde{\mathbf{L}}}
+\newcommand{\scrF}{\mathscr{F}}
+\newcommand{\tscrF}{\widetilde{\mathscr{F}}}
+\newcommand{\scrL}{\mathscr{L}}
+\newcommand{\tscrL}{\widetilde{\mathscr{L}}}
+\newcommand{\scrP}{\mathscr{P}}
+\newcommand{\tscrP}{\widetilde{\mathscr{P}}}
