more or less final version of presentation

--- a/Bogdan presentation/bogdanpresentation.tex
+++ b/Bogdan presentation/bogdanpresentation.tex
@@ -226,6 +226,9 @@ If we define $S$ to be the space of rulings on the fibers, we see that it is a d
     
 \end{frame}
 
+\begin{frame}{Thanks!!}
+    Thank you for your attention!
+\end{frame}
 
 
 
